[package]
name = "cross_counter2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross_counter2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.24.2" }
bytemuck = "1.9.1"
#wormhole-sdk = {path = "../../../../wormhole/sdk/rust/sdk/", features = ["solana"]}
mock_wormhole = {path = "../MockWormhole/", features = ["cpi"] }